# terrain-engine

./: CMakeLists.txt  main.cpp  setup.sh
include/: .gitignore  CMakeLists.txt
shaders/: density.comp  density.compute  marching_cubes.comp  marching_cubes.compute  mc_count.comp  mc_emit.comp  shader.fs  shader.vs  snoise.comp  snoise.compute
src/: camera.h  chunk.cpp  chunk.h  chunk_worker.cpp  chunk_worker.h  config.h  db_perlin.hpp  frustum.cpp  frustum.h  gl_shared.cpp  gl_shared.h  init.cpp  init.h  init_shaders.h  job_queues.h  load_shaders.cpp  load_shaders.h  marching_cubes.h  snoise.h  worker_types.h  world.cpp  world.h
